--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 {
   "@context": "https://schema.org/",
   "@type": "WebSite",
-  "name": "Nelson Gomez",
+  "name": "El Gran Nelson Gomez",
   "url": "https://www.elgrannelsongomez.com/",
   "potentialAction": {
     "@type": "SearchAction",
